syntax = "proto2";

package github.com.karmada_io.karmada.pkg.estimator.service;

import "pkg/estimator/pb/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "service";

service Estimator {
  rpc MaxAvailableReplicas(pb.MaxAvailableReplicasRequest) returns (pb.MaxAvailableReplicasResponse) {}
  rpc GetUnschedulableReplicas(pb.UnschedulableReplicasRequest) returns (pb.UnschedulableReplicasResponse) {}
}
